Refactor antlr4 package